Closed Bug 991039 Opened 11 years ago Closed 11 years ago

hang after "move to new window" for about:sessionrestore

Categories

(Core :: General, defect)

x86
Windows Vista
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla31
Tracking Status
firefox30 --- fixed
firefox31 --- verified

People

(Reporter: wsmwk, Assigned: bugzilla)

References

Details

(Keywords: hang)

Attachments

(2 files, 1 obsolete file)

windows vista 31.0a1 (2014-04-01) breakpad on stack - for flash plugin? anyway, had a window with 20-30 tabs including about:sessionrestore. thought I'd try moving about:sessionrestore tab to a new window. new window appeared, no about:sessionrestore information waited hung only ~1GB working set for firefox at the time
So you're deadlocked because the IOInterposer code got called by way of CreateFile from the minidump callback, but it tried to malloc and got stuck. bug 973353 was supposed to fix this, but it looks like we didn't fix it properly (oops). Specifically, on Windows we're using the FPEFilter function: http://hg.mozilla.org/mozilla-central/annotate/7bacc9e903b0/toolkit/crashreporter/nsExceptionHandler.cpp#l1130 http://hg.mozilla.org/mozilla-central/annotate/7bacc9e903b0/toolkit/crashreporter/nsExceptionHandler.cpp#l871 and not the Filter function, so the disabling isn't happening.
Blocks: 973353
Product: Firefox → Core
Attached patch FixSplinter Review
Assignee: nobody → aklotz
Status: NEW → ASSIGNED
Attachment #8400762 - Flags: review?(ted)
Comment on attachment 8400762 [details] [diff] [review] Fix Review of attachment 8400762 [details] [diff] [review]: ----------------------------------------------------------------- Sorry I missed this in my original review!
Attachment #8400762 - Flags: review?(ted) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Comment on attachment 8400762 [details] [diff] [review] Fix [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 902587 User impact if declined: Windows users might not be able to generate crash reports under certain conditions. Testing completed (on m-c, etc.): On m-c Risk to taking this patch (and alternatives if risky): None String or IDL/UUID changes made by this patch: None
Attachment #8400762 - Flags: approval-mozilla-aurora?
Attachment #8400762 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Attached patch AcroRd32.exe (obsolete) — Splinter Review
blocking-b2g: --- → 1.3?
Please don't flip flags on things you don't understand.
blocking-b2g: 1.3? → ---
Attachment #8441018 - Attachment is obsolete: true
I was unable to reproduce this issue on Nightly 31.0a1 (2014-04-01) nor on Firefox 31 Beta 9 (Build ID: 20140710141843) using Windows Vista 32-bit. Several attempts were made using 30 to 50 tabs, but moving the about:sessionrestore tab to a new window via "Move to New Window" right-click action or by drag&drop didn't cause any issues. Wayne, could you please try to reproduce this bug using Firefox 31 Beta 9 [1] and confirm whether it's fixed or not on your end? [1] http://ftp.mozilla.org/pub/mozilla.org/firefox/candidates/31.0b9-candidates/build1/
Flags: needinfo?(vseerror)
Keywords: verifyme
Thanks for the patch and everyone's help WFM smooth as silk with 20140705 build
Status: RESOLVED → VERIFIED
Flags: needinfo?(vseerror)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: