Bug 991039: Disable IOInterposer in FPEFilter; r=ted a=lsblakk